Recuperando elementos e adicionando valores em JS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <script src="./js/script.js" defer> </script>
 </head>
 <body>
-    
+    <h1 class="minha-classe">MINHA CALCULADORA EM JAVASCRIPT</h1>
+    <div>
+
+        <!--Calculadora em jaascript-->
+        <form action="index.html">
+            <input type="text" id="txtDisplay" value="0" readonly>
+        
+            <div>
+                <!--  input*11[type="button"][id="btn1"][value="1"]  -->
+                <input type="button" id="btn1" value="1">
+                <input type="button" id="btn2" value="2">
+                <input type="button" id="btn3" value="3">
+                <input type="button" id="btn4" value="4">
+                <input type="button" id="btn5" value="5">
+                <input type="button" id="btn6" value="6">
+                <input type="button" id="btn7" value="7">
+                <input type="button" id="btn8" value="8">
+                <input type="button" id="btn9" value="9">
+                <input type="button" id="btn0" value="0">
+                <input type="button" id="btnPonto" value=".">
+            </div>
+
+        </form>
+    </div>
 </body>
 </html>
