Adicionando valores aos botões

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CALC-JS</title>
     <script src="./js/script.js" defer> </script>
 </head>
-<body>
+<body onload="nomeDaFuncao()">
     <h1 class="minha-classe">MINHA CALCULADORA EM JAVASCRIPT</h1>
     <div>
 
