Arrow Function JS

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <input type="button" id="btn0" value="0">
                 <input type="button" id="btnPonto" value=".">
             </div>
+            <div>
+                <input type="button" id="btnSomar" value="+">
+                <input type="button" id="btnResultado" value="=">
+            </div>
 
         </form>
     </div>
